# AsteroidsSDL2

./: .gitignore  ALL_BUILD.vcxproj  AsteroidsSDL.sln  AsteroidsSDL.vcxproj  AsteroidsSDL.vcxproj.filters  CMakeCache.txt  CPPTestProject.sln  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
.github/workflows/: build_all.yaml  build_linux.yaml  build_macos.yaml
AsteroidsSDL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AsteroidsSDL.sln  AsteroidsSDL.vcxproj  AsteroidsSDL.vcxproj.filters  CMakeCache.txt  CMakeList.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
AsteroidsSDL/cmake/: FindSDL2.cmake  FindSDL2_Image.cmake
AsteroidsSDL/src/: AsteroidsSDL.sln  CMakeLists.txt  config.txt  main.cpp  main.h  settings.cpp  settings.h
AsteroidsSDL/src/Packaging/_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
AsteroidsSDL/src/cmake/: FindSDL2.cmake  FindSDL2IMAGE.cmake  FindSDL2TTF.cmake  FindSDL2_Image.cmake
AsteroidsSDL/src/entities/: Entity.cpp  Entity.h  EntityManager.h  asteroid.cpp  asteroid.h  ship.cpp  ship.h  thrust_renderer.cpp  thrust_renderer.h
AsteroidsSDL/src/entities/env/: parallax_renderer.cpp  parallax_renderer.h  thrust_renderer.h
AsteroidsSDL/src/installation/: AppIcion.rc  resource.h
AsteroidsSDL/src/installation/win/: App.manifest  app.rc
AsteroidsSDL/src/math/: polygon_math.cpp
AsteroidsSDL/src/window/: RenderWindow.h  camera.cpp  camera.h  render_window.cpp  ui.cpp
CPPTestProject/: CPPTestProject.vcxproj  CPPTestProject.vcxproj.filters  Entity.cpp  Entity.h  RenderWindow.h  game.h  input.cpp  input.h  main.cpp  main.h  player.cpp  player.h  render_window.cpp
CPPTestProject/src/: RenderWindow.h  main.cpp  main.h  render_window.cpp  settings.cpp  settings.h
CPPTestProject/src/Entities/: Entity.cpp  Entity.h  player.cpp  player.h
CPPTestProject/src/entities/: asteroid.cpp  asteroid.h  ship.cpp  ship.h
CPPTestProject/src/math/: polygon_math.cpp
CPPTestProject/src/window/: RenderWindow.h  camera.cpp  camera.h  render_window.cpp
Packaging/_CPack_Packages/win64/NSIS/: project.nsi
